added link placeholders for redirections

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,5 @@
 <ul class="topnav" id="myTopnav">
-  <li><a id="home" class="active" href="#"><i class="fa fa-university" aria-hidden="true"></i> Home</a></li>
+  <li><a id="home" class="active" href="#"><i class="fa fa-university" aria-hidden="true"></i> Art Lyf </a></li>
   <li><a id="projects" href="#"><i class="fa fa-suitcase" aria-hidden="true"></i> Projects</a></li>
   <li><a id="contact" href="#"><i class="fa fa-paper-plane-o" aria-hidden="true"></i> Contact</a></li>
   <li><a id="about" href="#"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
@@ -14,7 +14,7 @@
 
   <img class="profilePic" src="./images/profile_Pic.JPG">
   <br>
-  <!-- <span>I love&nbsp;</span><span class="text"></span><span class="cursor">|</span> -->
+  <span>I love&nbsp;</span><span class="text"></span><span class="cursor">|</span>
   <br>
   <div class="row">
     <div id="personalStatement" class="post">
@@ -34,25 +34,36 @@
   <div id="projectsSection" class="post hide">
     <div id="tabs" class="ui-tabs ui-corner-all ui-widget ui-widget-content">
       <ul>
-        <li><a href="#tabs-1"> Greet Friend</a></li>
-        <li><a href="#tabs-2">Shoe Catalogue</a></li>
-        <li><a href="#tabs-3">Nelisas Spaza Shop</a></li>
+        <li><a href="#tabs-1"> T-Shirts </a></li>
+        <li><a href="#tabs-2">Long Sleaves Top</a></li>
+        <li><a href="#tabs-3">Caps</a></li>
       </ul>
 
       <div id="tabs-1">
-        <p>This is the app that alllows a user to greet a friend and it can count how many times has a specific user been greeted.</p>
-        <div class="ui-state-highlight ui-corner-all"><strong>Link : </strong><a href="https://oyamasiphula.github.io/bootCamp_workouts_CS/CS_exercises/greet.html">Greet Friend</a>
+        <p>This is just a tshirt you can wear on a summer time.</p>
+        <div class="ui-state-highlight ui-corner-all"><strong>
+
+<img class="ads" src="images/fashion_gallery/tshirt.jpg" alt="">
+<br>
+          Link : </strong><a href="#">Buy</a>
+
         </div>
       </div>
       <div id="tabs-2">
-        <p>This application let users to explore the clothing shop available items, a user can search for a specific shoe and on the other side an administrator can add more shoes.</p>
-        <div class="ui-state-highlight ui-corner-all"><strong>Link : </strong><a href="https://oyamasiphula.github.io/bootCamp_workouts_CS/CS_exercises/shoe_catalogue.html">Shoe Catalogue</a>
+        <p>This is just a good top for mid winter and summer.</p>
+        <div class="ui-state-highlight ui-corner-all"><strong>
+
+  <img class="ads" src="images/fashion_gallery/Optimized-long-sleeve.jpg" alt="">
+<br>
+  Link : </strong><a href="#">Buy</a>
         </div>
       </div>
       <div id="tabs-3">
-        <p>This is an informal convenience business that runs from home. I built this app to make all the paper work less for business owners. It gives a summary of how business items are being purchased from the supplier and sold items. It just makes
-          all the business records transparent and it can build trust between shop owners, shopkeeper/seller and their customers.</p>
-        <div class="ui-state-highlight ui-corner-all"><strong>Link : </strong><a href="http://oya.projectcodex.co/">Nelisas Spaza Shop</a>.
+        <p>This is a good cap to wear in summer.</p>
+        <div class="ui-state-highlight ui-corner-all"><strong>
+          <img class="ads" src="images/fashion_gallery/Optimized-cap.JPG" alt="">
+        <br>
+          Link : </strong><a href="#">Buy</a>.
         </div>
       </div>
     </div>
@@ -88,10 +99,10 @@
         <div class="right"></div>
         <div class="cover"></div>
         <div class="paper">
-          <a class="call" href="tel:0829278734" disabled>
-            <div class="i"></div>082 927 8734</a>
-          <a class="mail" href="mailto:oyamasiphula@gmail.com">
-            <div class="i"></div>oyamasiphula@gmail.com</a>
+          <a class="call" href="tel:065 865 2825" disabled>
+            <div class="i"></div>065 865 2825</a>
+          <a class="mail" href="mailto:nondumisogodlo@gmail.com">
+            <div class="i"></div>nondumisogodlo@gmail.com</a>
         </div>
       </div>
     </div>
