added an optimized picture

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,7 +12,7 @@
   <h3>Hi there! I am</h3>
   <h1>Barngie</h1>
 
-  <img class="profilePic" src="./images/profile_Pic.JPG">
+  <img class="profilePic" src="./images/Optimized-profile_Pic.JPG">
   <br>
   <span>I love&nbsp;</span><span class="text"></span><span class="cursor">|</span>
   <br>
