removed inline style

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -23,7 +23,7 @@
 
         </p>
         <p><strong>Everything is possible</strong></p>
-        <img src="images/IMG_4567.JPG" alt="" style="height:20%; width:20%">
+        <img class="profilePic"  src="images/IMG_4567.JPG" alt="">
       </div>
     </div>
   </div>
