added appropriate content for advertisement

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -35,12 +35,12 @@
     <div id="tabs" class="ui-tabs ui-corner-all ui-widget ui-widget-content">
       <ul>
         <li><a href="#tabs-1"> T-Shirts </a></li>
-        <li><a href="#tabs-2">Long Sleaves Top</a></li>
+        <li><a href="#tabs-2">Long Sleeves Top</a></li>
         <li><a href="#tabs-3">Caps</a></li>
       </ul>
 
       <div id="tabs-1">
-        <p>This is just a tshirt you can wear on a summer time.</p>
+        <p>This is just a T-shirt you can wear on a summer time.</p>
         <div class="ui-state-highlight ui-corner-all"><strong>
 
 <img class="ads" src="images/fashion_gallery/tshirt.jpg" alt="">
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div id="tabs-2">
-        <p>This is just a good top for mid winter and summer.</p>
+        <p>This is just a good Top for mid winter season.</p>
         <div class="ui-state-highlight ui-corner-all"><strong>
 
   <img class="ads" src="images/fashion_gallery/Optimized-long-sleeve.jpg" alt="">
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div id="tabs-3">
-        <p>This is a good cap to wear in summer.</p>
+        <p>This is a good cap to wear on a summer season.</p>
         <div class="ui-state-highlight ui-corner-all"><strong>
           <img class="ads" src="images/fashion_gallery/Optimized-cap.JPG" alt="">
         <br>
