--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="./style/css/normalize.css">
   <link rel="stylesheet" href="./style/css/skeleton.css">
   <link rel="stylesheet" href="./style/css/custom.css">
+  <link rel="stylesheet" href="./style/css/logo.css">
   <link rel="stylesheet" href="./style/css/info.css">
   <link rel="stylesheet" href="./style/css/jquery-ui.css">
   <link href="https://fonts.googleapis.com/css?family=Eczar" rel="stylesheet">
