--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,5 @@
 <ul class="topnav" id="myTopnav">
-  <li><a id="home" class="active" href="#"><i class="fa fa-university" aria-hidden="true"></i> Art Lyf </a></li>
+  <li><a id="home" class="active" href="#"><i class="fa fa-university" aria-hidden="true"><h1><span>Art LyF</span></h1></i></a></li><br>
   <li><a id="projects" href="#"><i class="fa fa-suitcase" aria-hidden="true"></i> Projects</a></li>
   <li><a id="contact" href="#"><i class="fa fa-paper-plane-o" aria-hidden="true"></i> Contact</a></li>
   <li><a id="about" href="#"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
@@ -7,10 +7,9 @@
     <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()"><i class="fa fa-bars fa-1" aria-hidden="true"></i></a>
   </li>
 </ul>
-
 <div class="wrapper">
   <h3>Hi there! I am</h3>
-  <h1>Barngie</h1>
+  <h2>Barngie</h2>
 
   <img class="profilePic" src="./images/Optimized-profile_Pic.JPG">
   <br>
