--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,8 +1,8 @@
 <ul class="topnav" id="myTopnav">
-  <li><a id="home" class="active" href="#"><i class="fa fa-university" aria-hidden="true"><h1><span>Art LyF</span></h1></i></a></li><br>
-  <li><a id="projects" href="#"><i class="fa fa-suitcase" aria-hidden="true"></i> Projects</a></li>
-  <li><a id="contact" href="#"><i class="fa fa-paper-plane-o" aria-hidden="true"></i> Contact</a></li>
-  <li><a id="about" href="#"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
+  <li><a id="home" class="active" href="#"><i class="fa fa-university" aria-hidden="true"><h1><span>Art LyF</span></h1></i></a></li>
+  <li class="navItem"><a id="about" href="#"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
+  <li class="navItem"><a id="contact" href="#"><i class="fa fa-paper-plane-o" aria-hidden="true"></i> Contact</a></li>
+  <li class="navItem"><a id="projects" href="#"><i class="fa fa-suitcase" aria-hidden="true"></i> Projects</a></li>
   <li class="icon">
     <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()"><i class="fa fa-bars fa-1" aria-hidden="true"></i></a>
   </li>
