added a small about information as an example

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -105,6 +105,7 @@
         </div>
       </div>
     </div>
+
   </div>
 </div>
 
@@ -117,9 +118,7 @@
           <h1 data-shadow="About">About</h1>
         </div>
       </section>
-      <p>I started coding in 2014 and I enjoyed the coding journey a lot because I learnt so many concepts and their application then still I started to realise that there were so many other things to learn and master, from there I believed and followed
-        the continuous improvement and the continuous intergration principle. The best thing I liked about programming is that I can easily convert a business problem and solve it programmaticaly by developing an application or by giving a piece of
-        hardware a set of rules to follow.</p>
+      <p>I started something in 20...</p>
     </div>
   </div>
   <br>
@@ -133,18 +132,18 @@
           </li>
 
           <li id="soft-tap" class="tab-item" data-index="2">
-            <span class="tab-info">Soft Skills</span>
+            <span class="tab-info">Statistics</span>
             <i class="fa fa-user-plus" aria-hidden="true"></i>
           </li>
           <li id="technical-tap" class="tab-item" data-index="1">
-            <span class="tab-info">Other Tech Skills</span>
+            <span class="tab-info">Head wear</span>
             <i class="fa fa-code" aria-hidden="true"></i>
           </li>
         </ul>
       </section>
 
       <div id="container" class="soft hide">
-        <p>Software Skills Box</p>
+        <p>Body Wear</p>
         <div class="fundo">
           <div id="progresso1">
             <span class="area ">nodejs & npm</span>
