added fav icon that will be supported by all the browsers

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,8 +9,8 @@
   <!-- CSS -->
   <link rel="stylesheet" href="./style/css/normalize.css">
   <link rel="stylesheet" href="./style/css/skeleton.css">
-  <link rel="stylesheet" href="./style/css/custom.css">
   <link rel="stylesheet" href="./style/css/logo.css">
+  <link rel="stylesheet" href="./style/css/custom.css">
   <link rel="stylesheet" href="./style/css/info.css">
   <link rel="stylesheet" href="./style/css/jquery-ui.css">
   <link href="https://fonts.googleapis.com/css?family=Eczar" rel="stylesheet">
@@ -18,19 +18,24 @@
   <link rel="stylesheet" href="./style/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Raleway" rel="stylesheet">
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="./images/favicon.JPG">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
 </head>
 
 <body>
-{{{body}}}
+  {{{body}}}
 
   <div class="social-container">
     <ul class="social-icons">
       <li><a href="#"><i class="fa fa-instagram"></i></a></li>
       <li><a href="#"><i class="fa fa-twitter"></i></a></li>
       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-      <li><a href="#"><i class="fa fa-github-square"></i></a></li>
+      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
     </ul>
   </div>
   <script src="./js/jquery-ui.min.js"></script>
@@ -38,6 +43,7 @@
   <script type="text/javascript" src="./js/nav.js"></script>
   <script type="text/javascript" src="./js/info.js"></script>
   <script type="text/javascript" src="./js/about.js"></script>
+  <small>Copyright <img src="images/CopyrightSymbol.png"> Art Lyf 2019</small>
 </body>
 
 </html>
