--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -44,7 +44,7 @@
 
 <img class="ads" src="images/fashion_gallery/tshirt.jpg" alt="">
 <br>
-          Link : </strong><a href="#">Buy</a>
+          R200 : </strong><a href="#">Buy</a>
 
         </div>
       </div>
@@ -54,7 +54,7 @@
 
   <img class="ads" src="images/fashion_gallery/Optimized-long-sleeve.jpg" alt="">
 <br>
-  Link : </strong><a href="#">Buy</a>
+  R400 : </strong><a href="#">Buy</a>
         </div>
       </div>
       <div id="tabs-3">
@@ -62,7 +62,7 @@
         <div class="ui-state-highlight ui-corner-all"><strong>
           <img class="ads" src="images/fashion_gallery/Optimized-cap.JPG" alt="">
         <br>
-          Link : </strong><a href="#">Buy</a>.
+          R180 : </strong><a href="#">Buy</a>.
         </div>
       </div>
     </div>
