--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -105,7 +105,8 @@
         </div>
       </div>
     </div>
-
+    <input class="formInput" type="text" name="" value="" placeholder="your fullname">
+    <input class="formArea" type="text" name="" value="" placeholder="your text message">
   </div>
 </div>
 
