--- a/public/style/css/custom.css
+++ b/public/style/css/custom.css
@@ -421,7 +421,7 @@ svg {
 .contact .envelope .paper a {
   position: relative;
   display: block;
-  font-size: 14px;
+  font-size: 12px;
   margin: 5px;
   margin-bottom: 0px;
   text-align: center;
@@ -483,8 +483,21 @@ svg {
   top: 0px;
   left: 17px;
   display: inline-block;
-  font-size: 13px;
+  font-size: 12px;
   font-weight: bold;
+}
+.formInput {
+  height: 34px;
+  border: 1px solid black;
+  width: 300px;
+  font-size: initial;
+}
+.formArea {
+  max-width: 30em;
+  width: -webkit-fill-available;
+  border: 1px solid black;
+  font-size: 14px;
+  /* display: block; */
 }
 
 .call {
