--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,7 @@
 <ul class="topnav" id="myTopnav">
-  <li><a id="home" class="active" href="#"><i class="fa fa-university" aria-hidden="true"><h1><span>Art LyF</span></h1></i></a></li>
+  <li><a id="home" class="active" href="#"><i class="fa fa-university" aria-hidden="true">
+        <h1><span>Art LyF</span></h1>
+      </i></a></li>
   <li class="navItem"><a id="about" href="#"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
   <li class="navItem"><a id="contact" href="#"><i class="fa fa-paper-plane-o" aria-hidden="true"></i> Contact</a></li>
   <li class="navItem"><a id="projects" href="#"><i class="fa fa-suitcase" aria-hidden="true"></i> Projects</a></li>
@@ -22,7 +24,7 @@
 
         </p>
         <p><strong>Everything is possible</strong></p>
-        <img class="profilePic"  src="images/IMG_4567.JPG" alt="">
+        <img class="profilePic" src="images/IMG_4567.JPG" alt="">
       </div>
     </div>
   </div>
@@ -42,9 +44,9 @@
         <p>This is just a T-shirt you can wear on a summer time.</p>
         <div class="ui-state-highlight ui-corner-all"><strong>
 
-<img class="ads" src="images/fashion_gallery/tshirt.jpg" alt="">
-<br>
-          R200 : </strong><a href="#">Buy</a>
+            <img class="ads" src="images/fashion_gallery/tshirt.jpg" alt="">
+            <br>
+            R200 : </strong><a href="#">Buy</a>
 
         </div>
       </div>
@@ -52,17 +54,17 @@
         <p>This is just a good Top for mid winter season.</p>
         <div class="ui-state-highlight ui-corner-all"><strong>
 
-  <img class="ads" src="images/fashion_gallery/Optimized-long-sleeve.jpg" alt="">
-<br>
-  R400 : </strong><a href="#">Buy</a>
+            <img class="ads" src="images/fashion_gallery/Optimized-long-sleeve.jpg" alt="">
+            <br>
+            R400 : </strong><a href="#">Buy</a>
         </div>
       </div>
       <div id="tabs-3">
         <p>This is a good cap to wear on a summer season.</p>
         <div class="ui-state-highlight ui-corner-all"><strong>
-          <img class="ads" src="images/fashion_gallery/Optimized-cap.JPG" alt="">
-        <br>
-          R180 : </strong><a href="#">Buy</a>.
+            <img class="ads" src="images/fashion_gallery/Optimized-cap.JPG" alt="">
+            <br>
+            R180 : </strong><a href="#">Buy</a>.
         </div>
       </div>
     </div>
@@ -99,17 +101,28 @@
         <div class="cover"></div>
         <div class="paper">
           <a class="call" href="tel:065 865 2825" disabled>
-            <div class="i"></div>065 865 2825</a>
+            <div class="i"></div>065 865 2825
+          </a>
           <a class="mail" href="mailto:nondumisogodlo@gmail.com">
-            <div class="i"></div>nondumisogodlo@gmail.com</a>
+            <div class="i"></div>nondumisogodlo@gmail.com
+          </a>
         </div>
       </div>
     </div>
-    <input class="formInput" type="text" name="" value="" placeholder="your fullname">
-    <input class="formArea" type="text" name="" value="" placeholder="your text message">
+    <input class="formInput" type="text" name="" value="" placeholder="Full Name">
+    <div class="emailBox">
+      <small id="emailText">Your message</small><br>
+      <div placeholder="message" id="source" contenteditable=""></div>
+      <input type="button" name="" value="Send">
+    </div>
+
   </div>
 </div>
-
+<script type="text/javascript">
+$('input[type="button"]').click(function(e) {
+$('input[type="text"]').val($('#source').html());
+});
+</script>
 
 <div class="row">
   <div id="aboutMeSection" class="post hide">
@@ -290,14 +303,14 @@
       </div>
 
       <svg id="sticky-svg-filter" xmlns="http://www.w3.org/2000/svg" version="1.1">
-<defs>
-  <filter id="gooey">
-    <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
-    <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
-    <feComposite in="SourceGraphic" in2="goo" operator="atop" />
-  </filter>
-</defs>
-</svg>
+        <defs>
+          <filter id="gooey">
+            <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+            <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
+            <feComposite in="SourceGraphic" in2="goo" operator="atop" />
+          </filter>
+        </defs>
+      </svg>
     </div>
   </div>
 </div>
