added a textarea for a personal message

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -49,6 +49,7 @@
             R200 : </strong><a href="#">Buy</a>
 
         </div>
+        <input class="button" type="button" name="" value=" + Add">
       </div>
       <div id="tabs-2">
         <p>This is just a good Top for mid winter season.</p>
@@ -58,6 +59,7 @@
             <br>
             R400 : </strong><a href="#">Buy</a>
         </div>
+        <input class="button" type="button" name="" value=" + Add">
       </div>
       <div id="tabs-3">
         <p>This is a good cap to wear on a summer season.</p>
@@ -65,7 +67,9 @@
             <img class="ads" src="images/fashion_gallery/Optimized-cap.JPG" alt="">
             <br>
             R180 : </strong><a href="#">Buy</a>.
+            <br>
         </div>
+        <input class="button" type="button" name="" value=" + Add">
       </div>
     </div>
   </div>
@@ -109,12 +113,14 @@
         </div>
       </div>
     </div>
-    <input class="formInput" type="text" name="" value="" placeholder="Full Name">
-    <div class="emailBox">
-      <small id="emailText">Your message</small><br>
-      <div placeholder="message" id="source" contenteditable=""></div>
-      <input type="button" name="" value="Send">
-    </div>
+    <form action="/" method="post">
+      <input class="formInput" type="text" name="name" placeholder="Full Name">
+      <div class="emailBox">
+        <small id="emailText">Your message</small><br>
+        <textarea name="message" id="source" contenteditable=""></textarea>
+        <input class="button" type="submit" name="" value="Send">
+      </div>
+    </form>
 
   </div>
 </div>
