added proper title for the app

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Nondumsio's Web applicaion</title>
+  <title>Nondumiso's Web applicaion</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- CSS -->
   <link rel="stylesheet" href="./style/css/normalize.css">
