add a placeholder and removed unnecessary elements

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -115,11 +115,9 @@
     </div>
     <form action="/" method="post">
       <input class="formInput" type="text" name="name" placeholder="Full Name">
-      <div class="emailBox">
-        <small id="emailText">Your message</small><br>
-        <textarea name="message" id="source" contenteditable=""></textarea>
+      <br>
+        <textarea placeholder="Your Message Here..."name="message" id="source" contenteditable=""></textarea>
         <input class="button" type="submit" name="" value="Send">
-      </div>
     </form>
 
   </div>
