--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -44,30 +44,37 @@
         <p>This is just a T-shirt you can wear on a summer time.</p>
         <div class="ui-state-highlight ui-corner-all"><strong>
 
-            <img class="ads" src="images/fashion_gallery/tshirt.jpg" alt="">
-            <br>
-            R200 : </strong><a href="#">Buy</a>
-
+        {{#each tShirt}}
+        <img class="ads" src="{{this.picture_Url}}" alt="">
+          <br>
+          Quantity : {{this.Qty}}<br>
+          {{this.Price}} : </strong><a href="#">Buy</a>
+          {{/each}}
         </div>
         <input class="button" type="button" name="" value=" + Add">
       </div>
       <div id="tabs-2">
         <p>This is just a good Top for mid winter season.</p>
         <div class="ui-state-highlight ui-corner-all"><strong>
-
-            <img class="ads" src="images/fashion_gallery/Optimized-long-sleeve.jpg" alt="">
+            {{#each longSleeve}}
+            <img class="ads" src="{{this.picture_Url}}" alt="">
             <br>
-            R400 : </strong><a href="#">Buy</a>
+            Quantity : {{this.Qty}}<br>
+            {{this.Price}} : </strong><a href="#">Buy</a>
+            {{/each}}
         </div>
         <input class="button" type="button" name="" value=" + Add">
       </div>
+
       <div id="tabs-3">
         <p>This is a good cap to wear on a summer season.</p>
         <div class="ui-state-highlight ui-corner-all"><strong>
-            <img class="ads" src="images/fashion_gallery/Optimized-cap.JPG" alt="">
+          {{#each cap}}
+          <img class="ads" src="{{this.picture_Url}}" alt="">
             <br>
-            R180 : </strong><a href="#">Buy</a>.
-            <br>
+            Quantity : {{this.Qty}}<br>
+            {{this.Price}} : </strong><a href="#">Buy</a>
+            {{/each}}
         </div>
         <input class="button" type="button" name="" value=" + Add">
       </div>
@@ -116,16 +123,16 @@
     <form action="/" method="post">
       <input class="formInput" type="text" name="name" placeholder="Full Name">
       <br>
-        <textarea placeholder="Your Message Here..."name="message" id="source" contenteditable=""></textarea>
-        <input class="button" type="submit" name="" value="Send">
+      <textarea placeholder="Your Message Here ..." name="message" id="source" contenteditable=""></textarea>
+      <input class="button" type="submit" name="" value="Send">
     </form>
 
   </div>
 </div>
 <script type="text/javascript">
-$('input[type="button"]').click(function(e) {
-$('input[type="text"]').val($('#source').html());
-});
+  $('input[type="button"]').click(function(e) {
+    $('input[type="text"]').val($('#source').html());
+  });
 </script>
 
 <div class="row">
