--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -171,64 +171,8 @@
         <p>Body Wear</p>
         <div class="fundo">
           <div id="progresso1">
-            <span class="area ">nodejs & npm</span>
+            <span class="area ">Long Sleeves</span>
             <span class="porcentagem ">80%</span>
-          </div>
-        </div>
-
-        <div class="fundo">
-          <div id="progresso2">
-            <span class="area ">HTML5 & CSS</span>
-            <span class="porcentagem ">95%</span>
-          </div>
-        </div>
-
-        <div class="fundo">
-          <div id="progresso3">
-            <span class="area ">JQuery</span>
-            <span class="porcentagem ">75%</span>
-          </div>
-        </div>
-
-        <div class="fundo">
-          <div id="progresso4">
-            <span class="area ">Javascript</span>
-            <span class="porcentagem ">65%</span>
-          </div>
-        </div>
-
-        <div class="fundo">
-          <div id="progresso5">
-            <span class="area ">Phpmyadmin & MySQL</span>
-            <span class="porcentagem ">90%</span>
-          </div>
-        </div>
-
-        <div class="fundo">
-          <div id="progresso6">
-            <span class="area ">Mongodb</span>
-            <span class="porcentagem ">50%</span>
-          </div>
-        </div>
-
-        <div class="fundo">
-          <div id="progresso7">
-            <span class="area ">Ubuntu</span>
-            <span class="porcentagem ">90%</span>
-          </div>
-        </div>
-
-        <div class="fundo">
-          <div id="progresso8">
-            <span class="area ">Windows</span>
-            <span class="porcentagem ">80%</span>
-          </div>
-        </div>
-
-        <div class="fundo">
-          <div id="progresso9">
-            <span class="area ">Git & Github</span>
-            <span class="porcentagem ">90%</span>
           </div>
         </div>
       </div>
@@ -237,81 +181,12 @@
         <p>Tech stack Box</p>
         <div class="fundo">
           <div id="progresso1">
-            <span class="area ">Bootstrap</span>
+            <span class="area ">Orange caps</span>
             <span class="porcentagem ">100%</span>
           </div>
         </div>
 
-        <div class="fundo">
-          <div id="progresso2">
-            <span class="area ">Skeleton</span>
-            <span class="porcentagem ">90%</span>
-          </div>
-        </div>
 
-        <div class="fundo">
-          <div id="progresso3">
-            <span class="area ">Handlebars</span>
-            <span class="porcentagem ">80%</span>
-          </div>
-        </div>
-
-        <div class="fundo">
-          <div id="progresso4">
-            <span class="area ">ExpressJS</span>
-            <span class="porcentagem ">95%</span>
-          </div>
-        </div>
-
-        <div class="fundo">
-          <div id="progresso5">
-            <span class="area ">Jekyll</span>
-            <span class="porcentagem ">65%</span>
-          </div>
-        </div>
-
-        <div class="fundo">
-          <div id="progresso6">
-            <span class="area ">Linux-server</span>
-            <span class="porcentagem ">90%</span>
-          </div>
-        </div>
-
-        <div class="fundo">
-          <div id="progresso7">
-            <span class="area ">PM2</span>
-            <span class="porcentagem ">90%</span>
-          </div>
-        </div>
-
-        <div class="fundo">
-          <div id="progresso8">
-            <span class="area ">nginx</span>
-            <span class="porcentagem ">80%</span>
-          </div>
-        </div>
-
-        <div class="fundo">
-          <div id="progresso9">
-            <span class="area ">tdd</span>
-            <span class="porcentagem ">100%</span>
-          </div>
-        </div>
-
-        <div class="fundo">
-          <div id="progresso10">
-            <span class="area ">Mocha&Chai</span>
-            <span class="porcentagem ">100%</span>
-          </div>
-        </div>
-
-        <div class="fundo">
-          <div id="progresso11">
-            <span class="area ">TravisCI</span>
-            <span class="porcentagem ">100%</span>
-          </div>
-        </div>
-      </div>
 
       <svg id="sticky-svg-filter" xmlns="http://www.w3.org/2000/svg" version="1.1">
         <defs>
