--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -44,11 +44,11 @@
         <p>This is just a T-shirt you can wear on a summer time.</p>
         <div class="ui-state-highlight ui-corner-all"><strong>
 
-        {{#each tShirt}}
-        <img class="ads" src="{{this.picture_Url}}" alt="">
-          <br>
-          Quantity : {{this.Qty}}<br>
-          {{this.Price}} : </strong><a href="#">Buy</a>
+            {{#each tShirt}}
+              <img class="ads" src="{{this.picture_Url}}" alt="">
+              <br>
+              Quantity : {{this.Qty}}<br>
+              {{this.Price}} : </strong><a href="#">Buy</a>
           {{/each}}
         </div>
         <input class="button" type="button" name="" value=" + Add">
@@ -57,11 +57,11 @@
         <p>This is just a good Top for mid winter season.</p>
         <div class="ui-state-highlight ui-corner-all"><strong>
             {{#each longSleeve}}
-            <img class="ads" src="{{this.picture_Url}}" alt="">
-            <br>
-            Quantity : {{this.Qty}}<br>
-            {{this.Price}} : </strong><a href="#">Buy</a>
-            {{/each}}
+              <img class="ads" src="{{this.picture_Url}}" alt="">
+              <br>
+              Quantity : {{this.Qty}}<br>
+              {{this.Price}} : </strong><a href="#">Buy</a>
+          {{/each}}
         </div>
         <input class="button" type="button" name="" value=" + Add">
       </div>
@@ -69,19 +69,37 @@
       <div id="tabs-3">
         <p>This is a good cap to wear on a summer season.</p>
         <div class="ui-state-highlight ui-corner-all"><strong>
-          {{#each cap}}
-          <img class="ads" src="{{this.picture_Url}}" alt="">
-            <br>
-            Quantity : {{this.Qty}}<br>
-            {{this.Price}} : </strong><a href="#">Buy</a>
-            {{/each}}
+            {{#each cap}}
+              <img class="ads" src="{{this.picture_Url}}" alt="">
+              <br>
+              Quantity : {{this.Qty}}<br>
+              {{this.Price}} : </strong><a href="#">Buy</a>
+          {{/each}}
         </div>
         <input class="button" type="button" name="" value=" + Add">
       </div>
     </div>
   </div>
 </div>
+<div class="row">
+  <div id="addProduct" class="post hide">
+    <form class="" action="/addProduct" method="post">
+      <label for="avatar">Choose a file to upload:</label>
+      <input type="file" id="avatar" name="avatar" accept="image/png, image/jpeg">
+      Type : <select class="brandOptions" name="">
+        <option class="placeHolder" value="" selected="true" disabled="">SELECT TYPE</option>
+        <option value="Cap">Cap</option>
+        <option value="Long Sleeve">Long Sleeve</option>
+      </select>
 
+      Quantity : <input type="number" name="" value="">
+
+      Price : <input type="text" name="" value="">
+      <input class="button" type="submit" name="" value="Submit">
+
+    </form>
+  </div>
+</div>
 <div class="row">
   <div id="contactSection" class="post hide">
 
@@ -188,15 +206,15 @@
 
 
 
-      <svg id="sticky-svg-filter" xmlns="http://www.w3.org/2000/svg" version="1.1">
-        <defs>
-          <filter id="gooey">
-            <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
-            <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
-            <feComposite in="SourceGraphic" in2="goo" operator="atop" />
-          </filter>
-        </defs>
-      </svg>
+        <svg id="sticky-svg-filter" xmlns="http://www.w3.org/2000/svg" version="1.1">
+          <defs>
+            <filter id="gooey">
+              <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+              <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
+              <feComposite in="SourceGraphic" in2="goo" operator="atop" />
+            </filter>
+          </defs>
+        </svg>
+      </div>
     </div>
   </div>
-</div>
