added a comment out in the history line as an exclude

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="./style/css/jquery-ui.css">
   <link href="https://fonts.googleapis.com/css?family=Eczar" rel="stylesheet">
   <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
+  <!-- <script src="https://unpkg.com/history/umd/history.min.js"></script> -->
   <link rel="stylesheet" href="./style/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Raleway" rel="stylesheet">
   <!-- Favicon -->
