--- a/public/style/css/custom.css
+++ b/public/style/css/custom.css
@@ -500,6 +500,7 @@ svg {
 }
 
 .formInput {
+  font-family: 'Barlow Semi Condensed', sans-serif;
   height: 34px;
   border: 1px solid black;
   width: auto;
@@ -514,7 +515,8 @@ input.button {
 }
 
 #source {
-  font-size: 14px;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-size: 16px;
   border: 1px solid #ccc;
   height: 50px;
   border-radius: 5px;
