--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,6 +28,25 @@
 </head>
 
 <body>
+  <ul class="topnav" id="myTopnav">
+    <li><a id="home" class="active" href="#"><i class="fa fa-university" aria-hidden="true">
+          <h1><span>Art LyF</span></h1>
+        </i></a></li>
+    <li class="navItem"><a id="about"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
+    <li class="navItem"><a id="contact"><i class="fa fa-paper-plane-o" aria-hidden="true"></i> Contact</a></li>
+    <li class="navItem"><a id="projects"><i class="fa fa-suitcase" aria-hidden="true"></i> Projects</a></li>
+    <li class="icon">
+      <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()"><i class="fa fa-bars fa-1" aria-hidden="true"></i></a>
+    </li>
+  </ul>
+  <div class="wrapper">
+    <h3>Hi there! I am</h3>
+    <h2>Barngie</h2>
+
+    <img class="profilePic" src="./images/Optimized-profile_Pic.JPG">
+    <br>
+    <span>I love&nbsp;</span><span class="text"></span><span class="cursor">|</span>
+  </div>
   {{{body}}}
 
   <div class="social-container">
