removed other pages layout to main their own handlebars

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,7 @@
 <br>
 <div class="row">
+  <div class="wrapper">
+
   <div id="personalStatement" class="post">
     <div class="ui-widget ui-front ui-widget-content ui-corner-all ui-widget-shadow">
       <p>
@@ -10,195 +12,5 @@
     </div>
   </div>
 </div>
+</div>
 <br>
-
-<div class="row">
-  <div id="projectsSection" class="post hide">
-    <div id="tabs" class="ui-tabs ui-corner-all ui-widget ui-widget-content">
-      <ul>
-        <li><a href="#tabs-1"> T-Shirts </a></li>
-        <li><a href="#tabs-2">Long Sleeves Top</a></li>
-        <li><a href="#tabs-3">Caps</a></li>
-      </ul>
-
-      <div id="tabs-1">
-        <p>This is just a T-shirt you can wear on a summer time.</p>
-        <div class="ui-state-highlight ui-corner-all"><strong>
-
-            {{#each tShirt}}
-              <img class="ads" src="{{this.picture_Url}}" alt="">
-              <br>
-              Quantity : {{this.Qty}}<br>
-              {{this.Price}} : </strong><a href="#">Buy</a>
-          {{/each}}
-        </div>
-        <input id="addButton" class="button" type="button" name="" value=" + Add">
-      </div>
-      <div id="tabs-2">
-        <p>This is just a good Top for mid winter season.</p>
-        <div class="ui-state-highlight ui-corner-all"><strong>
-            {{#each longSleeve}}
-              <img class="ads" src="{{this.picture_Url}}" alt="">
-              <br>
-              Quantity : {{this.Qty}}<br>
-              {{this.Price}} : </strong><a href="#">Buy</a>
-          {{/each}}
-        </div>
-        <input id="addButton" class="button" type="button" name="" value=" + Add">
-      </div>
-
-      <div id="tabs-3">
-        <p>This is a good cap to wear on a summer season.</p>
-        <div class="ui-state-highlight ui-corner-all"><strong>
-            {{#each cap}}
-              <img class="ads" src="{{this.picture_Url}}" alt="">
-              <br>
-              Quantity : {{this.Qty}}<br>
-              {{this.Price}} : </strong><a href="#">Buy</a>
-          {{/each}}
-        </div>
-        <input id="addButton" class="button" type="button" name="" value=" + Add">
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div id="addProductDiv" class="post hide">
-      <form class="" action="/addProduct" method="post">
-        <label for="avatar">Choose a file to upload:</label>
-        <input type="file" id="avatar" name="pictureUrl" accept="image/png, image/jpeg">
-        Type : <select class="brandOptions" name="typeOfCloth">
-          <option class="placeHolder" value="" selected="true" disabled="">SELECT TYPE</option>
-          <option value="Cap">Cap</option>
-          <option value="Long Sleeve">Long Sleeve</option>
-        </select>
-
-        Size : <input type="text" name="size" value="">
-
-        Quantity : <input type="number" name="qty" value="">
-
-        Price : <input type="text" name="price" value="">
-        <input class="button" type="submit" name="" value="Submit">
-
-      </form><br>
-      <input id="back" class="backButton" type="submit" name="" value="Back">
-  </div>
-</div>
-<div class="row">
-  <div id="contactSection" class="post hide">
-
-    <div class="contact">
-      <svg viewBox="0 0 600 300">
-        <!-- Symbol-->
-        <symbol id="s-text">
-          <text text-anchor="middle" x="50%" y="15%" dy=".30em">Contact Me</text>
-        </symbol>
-        <!-- Duplicate symbols-->
-        <use class="text" xlink:href="#s-text"></use>
-        <use class="text" xlink:href="#s-text"></use>
-        <use class="text" xlink:href="#s-text"></use>
-        <use class="text" xlink:href="#s-text"></use>
-        <use class="text" xlink:href="#s-text"></use>
-      </svg>
-      <br>
-      <br>
-      <div class="envelope">
-        <div class="top">
-          <div class="outer">
-            <div class="inner"></div>
-          </div>
-        </div>
-        <div class="bottom"></div>
-        <div class="left"></div>
-        <div class="right"></div>
-        <div class="cover"></div>
-        <div class="paper">
-          <a class="call" href="tel:065 865 2825" disabled>
-            <div class="i"></div>065 865 2825
-          </a>
-          <a class="mail" href="mailto:nondumisogodlo@gmail.com">
-            <div class="i"></div>nondumisogodlo@gmail.com
-          </a>
-        </div>
-      </div>
-    </div>
-    <form action="/" method="post">
-      <input class="formInput" type="text" name="name" placeholder="Full Name">
-      <br>
-      <textarea placeholder="Your Message Here ..." name="message" id="source" contenteditable=""></textarea>
-      <input class="button" type="submit" name="" value="Send">
-    </form>
-
-  </div>
-</div>
-<script type="text/javascript">
-  $('input[type="button"]').click(function(e) {
-    $('input[type="text"]').val($('#source').html());
-  });
-</script>
-
-<div class="row">
-  <div id="aboutMeSection" class="post hide">
-    <div class="ui-widget ui-front ui-widget-content ui-corner-all ui-widget-shadow">
-      <section id="about-me">
-        <div class="heading">
-          <h1 data-shadow="About">About</h1>
-        </div>
-      </section>
-      <p>I started something in 20...</p>
-    </div>
-  </div>
-  <br>
-  <div id="aboutMeSection" class="post hide">
-    <div class="ui-widget ui-front ui-widget-content ui-corner-all ui-widget-shadow">
-      <section id="about-me">
-        <ul class="tabs mobile-tabs">
-          <li id="info-tap" class="tab-item" data-index="4">
-            <span class="tab-info">Info</span>
-            <i class="fa fa-info"></i>
-          </li>
-
-          <li id="soft-tap" class="tab-item" data-index="2">
-            <span class="tab-info">Statistics</span>
-            <i class="fa fa-user-plus" aria-hidden="true"></i>
-          </li>
-          <li id="technical-tap" class="tab-item" data-index="1">
-            <span class="tab-info">Head wear</span>
-            <i class="fa fa-code" aria-hidden="true"></i>
-          </li>
-        </ul>
-      </section>
-
-      <div id="container" class="soft hide">
-        <p>Body Wear</p>
-        <div class="fundo">
-          <div id="progresso1">
-            <span class="area ">Long Sleeves</span>
-            <span class="porcentagem ">80%</span>
-          </div>
-        </div>
-      </div>
-
-      <div id="container" class="tech hide">
-        <p>Tech stack Box</p>
-        <div class="fundo">
-          <div id="progresso1">
-            <span class="area ">Orange caps</span>
-            <span class="porcentagem ">100%</span>
-          </div>
-        </div>
-
-
-
-        <svg id="sticky-svg-filter" xmlns="http://www.w3.org/2000/svg" version="1.1">
-          <defs>
-            <filter id="gooey">
-              <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
-              <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
-              <feComposite in="SourceGraphic" in2="goo" operator="atop" />
-            </filter>
-          </defs>
-        </svg>
-      </div>
-    </div>
-  </div>
