--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -9,40 +9,43 @@
 
       <div id="tabs-1">
         <p>This is just a T-shirt you can wear on a summer time.</p>
-        <div class="ui-state-highlight ui-corner-all"><strong>
-
-            {{#each tShirt}}
+        {{#each tShirt}}
+          <div class="ui-state-highlight ui-corner-all"><strong>
               <img class="ads" src="{{this.picture_Url}}" alt="">
               <br>
-              Quantity : {{this.Qty}}<br>
+              Quantity : {{this.Qty}}
+              <br>
               {{this.Price}} : </strong><a href="#">Buy</a>
-          {{/each}}
-        </div>
+          </div>
+        {{/each}}
         <input id="addButton" class="button" type="button" name="" value=" + Add">
       </div>
+
       <div id="tabs-2">
         <p>This is just a good Top for mid winter season.</p>
-        <div class="ui-state-highlight ui-corner-all"><strong>
-            {{#each longSleeve}}
+        {{#each longSleeve}}
+          <div class="ui-state-highlight ui-corner-all"><strong>
               <img class="ads" src="{{this.picture_Url}}" alt="">
               <br>
-              Quantity : {{this.Qty}}<br>
+              Quantity : {{this.Qty}}
+              <br>
               {{this.Price}} : </strong><a href="#">Buy</a>
-          {{/each}}
-        </div>
+          </div>
+        {{/each}}
         <input id="addButton" class="button" type="button" name="" value=" + Add">
       </div>
 
       <div id="tabs-3">
         <p>This is a good cap to wear on a summer season.</p>
-        <div class="ui-state-highlight ui-corner-all"><strong>
-            {{#each cap}}
+        {{#each cap}}
+          <div class="ui-state-highlight ui-corner-all"><strong>
               <img class="ads" src="{{this.picture_Url}}" alt="">
               <br>
-              Quantity : {{this.Qty}}<br>
+              Quantity : {{this.Qty}}
+              <br>
               {{this.Price}} : </strong><a href="#">Buy</a>
-          {{/each}}
-        </div>
+          </div>
+        {{/each}}
         <input id="addButton" class="button" type="button" name="" value=" + Add">
       </div>
     </div>
@@ -51,23 +54,23 @@
 
 <div class="row">
   <div id="addProductDiv" class="post hide">
-      <form class="" action="/addProduct" method="post">
-        <label for="avatar">Choose a file to upload:</label>
-        <input type="file" id="avatar" name="picture_Url" accept="image/png, image/jpeg">
-        Type : <select class="brandOptions" name="typeOfCloth">
-          <option class="placeHolder" value="" selected="true" disabled="">SELECT TYPE</option>
-          <option value="Cap">Cap</option>
-          <option value="Long Sleeve">Long Sleeve</option>
-        </select>
+    <form class="" action="/projects" method="post" enctype="multipart/form-data">
+      <label for="avatar">Choose a file to upload:</label>
+      <input type="file" id="avatar" name="picture_Url" accept="image/png, image/jpeg">
+      Type : <select class="brandOptions" name="typeOfCloth">
+        <option class="placeHolder" value="" selected="true" disabled="">SELECT TYPE</option>
+        <option value="Cap">Cap</option>
+        <option value="Long Sleeve">Long Sleeve</option>
+      </select>
 
-        Size : <input type="text" name="size" value="">
+      Size : <input type="text" name="size" value="">
 
-        Quantity : <input type="number" name="qty" value="">
+      Quantity : <input type="number" name="qty" value="">
 
-        Price : <input type="text" name="price" value="">
-        <input class="button" type="submit" name="" value="Submit">
+      Price : <input type="text" name="price" value="">
+      <input class="button" type="submit" name="" value="Submit">
 
-      </form><br>
-      <input id="back" class="backButton" type="submit" name="" value="Back">
+    </form><br>
+    <input id="back" class="backButton" type="submit" name="" value="Back">
   </div>
 </div>
